@@ -1,0 +1,6 @@
+#ifndef BANNER_H
+#define BANNER_H
+
+void banner (const char *text);
+
+#endif /* BANNER_H */
